--- a/templates/player.html
+++ b/templates/player.html
@@ -21,10 +21,11 @@
 
 	<body id="player-body" style="display: none; padding: 0; margin: 0;">
 		<p align="center">
-			<button onclick="listClassroom()">Select a Classroom</button>
+			<button onclick="listClassroom()">Select Classroom</button>
 			<button onclick="reloadClassroom(...randClassroom())">I'm Feeling Lucky</button>
-			<button onclick="extractClassroom()">Extract from LiveId or URL</button>
-			<button onclick="loadExtracted()">Load Extracted URL</button>
+			<button onclick="extractClassroom()">Extract URL</button>
+			<button onclick="loadExtracted()">Load URL</button>
+			<button onclick="slimExtracted()">Slim URL</button>
 		</p>
 		<div id="classrooms-list-div" style="display: none"></div>
 
