--- a/templates/player.html
+++ b/templates/player.html
@@ -374,7 +374,7 @@
 			try {
 				let url = new URL(input);
 				let info = JSON.parse((new URLSearchParams(decodeURIComponent(url.search))).get("info"));
-				delete info["type"]
+				delete info["type"];
 				delete info["liveId"];
 				prompt("Slimmed URL:", `${url.protocol}//${url.hostname}${url.pathname}` + "/info=" + encodeURIComponent(JSON.stringify(info)));
 			}
