--- a/templates/player.html
+++ b/templates/player.html
@@ -472,7 +472,9 @@
 						document.getElementById("player0-decodeddata-div").innerHTML = "Checkin failed: <br>" + decodedData;
 				}
 			}
-			catch (error) {}
+			catch (error) {
+				document.getElementById("player0-decodeddata-div").innerHTML = "Checkin Error: <br>" + error.message + " <br>" + decodedData;
+			}
 		};
 
 		/* Long press event for mode switching of scan button. */
