--- a/templates/player.html
+++ b/templates/player.html
@@ -57,7 +57,7 @@
 		</p>
 		<div id="player0-div"></div>
 		<p id="player0-scanresult-p" align="center">
-			<div id="player0-decodeddata-div"></div>
+			<div id="player0-decodeddata-div" style="text-align: center"></div>
 		</p>
 
 		<p align="center">
