--- a/templates/player.html
+++ b/templates/player.html
@@ -32,6 +32,7 @@
 		<p align="center" id="chaoxing-buttons">
 			<button id="chaoxing-login-button" onclick="chaoxingLogin()">Chaoxing Login</button>
 		</p>
+		<div id="curriculum-list-div" style="display: none"></div>
 		<div id="locations-list-div" style="display: none"></div>
 		<div id="activities-list-div" style="display: none"></div>
 
@@ -149,6 +150,7 @@
 		var chaoxing;
 		var chaoxing_logining = false;
 		var chaoxing_logined = false;
+		var curriculum = {};
 		var activities_list_loading = false;
 		var location_str = ('; '+document.cookie).split(`; location=`).pop().split(';')[0];
 		var location_ = (location_str == "") ? locations["B"] : JSON.parse(location_str);
@@ -247,6 +249,42 @@
 			else
 				e.style.display = "none";
 		}
+
+		function tablifyCurriculum() {
+			let table = document.createElement("table");
+			table.border = "1";
+			let tableBody = document.createElement("tbody");
+			for (let class_id in curriculum) {
+				let course = curriculum[class_id];
+					let tr = document.createElement("tr");
+				let td = document.createElement("td");
+				td.appendChild(document.createTextNode(course["name"]));
+				tr.appendChild(td);
+				td = document.createElement("td");
+				for (i in course["teacher"]) {
+					td.appendChild(document.createTextNode(course["teacher"][i] + " "));
+				}
+				tr.appendChild(td);
+				td = document.createElement("td");
+				td.appendChild(document.createTextNode(course["location"]));
+				tr.appendChild(td);
+				tableBody.appendChild(tr);
+			}
+			table.appendChild(tableBody);
+			document.getElementById("curriculum-list-div").appendChild(table);
+		}
+
+		function listCurriculum() {
+			let e = document.getElementById("curriculum-list-div");
+			if (e.style.display == "none")
+				e.style.display = "block";
+			else
+				e.style.display = "none";
+		}
+
+		/* Video sources control. */
+		function setClassroom(urlStr, classroomNameInternal = "Unknown") {
+			let url = new URL(urlStr);
 
 		/* Locations list toggle. */
 		function listLocation() {
@@ -533,16 +571,23 @@
 				alert("Logged in successfully.");
 				document.cookie = "username=" + username + "; max-age=31536000;";
 				document.cookie = "password=" + password + "; max-age=31536000;";
+				let res = await get("/chaoxing/get_curriculum");
+				curriculum = JSON.parse(res.text);
+				tablifyCurriculum();
 				let chaoxing_buttons = document.getElementById("chaoxing-buttons");
+				let button_curriculum = document.createElement("button");
 				let button_locations = document.createElement("button");
 				let button_input_location = document.createElement("button");
 				let button_activities = document.createElement("button");
-				button_locations.innerText = "Select Location";
+				button_curriculum.innerText = "Show Curriculum";
+				button_locations.innerText = "Set Location";
 				button_input_location.innerText = "Input Location";
 				button_activities.innerText = "Check Activities";
+				button_curriculum.setAttribute('onclick', 'listCurriculum()');
 				button_locations.setAttribute('onclick', 'listLocation()');
 				button_input_location.setAttribute('onclick', 'inputLocation()');
 				button_activities.setAttribute('onclick', 'listActivity()');
+				chaoxing_buttons.appendChild(button_curriculum);
 				chaoxing_buttons.appendChild(button_locations);
 				chaoxing_buttons.appendChild(button_input_location);
 				chaoxing_buttons.appendChild(button_activities);
