--- a/templates/player.html
+++ b/templates/player.html
@@ -16,6 +16,8 @@
 		<style>
 			div {font-size:22px; font-family: sans-serif;}
 			button {height: 40px; font-size: 22px; user-select: none;}
+			table, th, td {border: 1px solid black; border-collapse: collapse; text-align: center;}
+			table {width: 100%;}
 		</style>
 	</head>
 
