--- a/templates/player.html
+++ b/templates/player.html
@@ -152,6 +152,7 @@
 		var chaoxing;
 		var chaoxing_logining = false;
 		var chaoxing_logined = false;
+		var courses = {};
 		var curriculum = {};
 		var activities_list_loading = false;
 		var location_str = ('; '+document.cookie).split(`; location=`).pop().split(';')[0];
@@ -327,7 +328,7 @@
 					for (let class_id in activities) {
 						let class_activities = activities[class_id];
 						let div = document.createElement("div");
-						div.innerText = activities[class_id]["name"] + ": ";
+						div.innerText = courses[class_id]["name"] + ": ";
 						e.appendChild(div);
 						for (let i in class_activities) {
 							let activity = class_activities[i];
@@ -573,8 +574,12 @@
 				alert("Logged in successfully.");
 				document.cookie = "username=" + username + "; max-age=31536000;";
 				document.cookie = "password=" + password + "; max-age=31536000;";
-				let res = await get("/chaoxing/get_curriculum");
-				curriculum = JSON.parse(res.text);
+				let res = await get("/chaoxing/get_courses");
+				if (res.status_code == 200)
+					courses = JSON.parse(res.text);
+				res = await get("/chaoxing/get_curriculum");
+				if (res.status_code == 200)
+					curriculum = JSON.parse(res.text);
 				tablifyCurriculum();
 				let chaoxing_buttons = document.getElementById("chaoxing-buttons");
 				let button_curriculum = document.createElement("button");
