--- a/templates/player.html
+++ b/templates/player.html
@@ -587,7 +587,7 @@
 				let button_input_location = document.createElement("button");
 				let button_activities = document.createElement("button");
 				button_curriculum.innerText = "Show Curriculum";
-				button_locations.innerText = "Set Location";
+				button_locations.innerText = "Select Location";
 				button_input_location.innerText = "Input Location";
 				button_activities.innerText = "Check Activities";
 				button_curriculum.setAttribute('onclick', 'listCurriculum()');
