Use local resources

--- a/templates/player.html
+++ b/templates/player.html
@@ -7,10 +7,10 @@
 	<link rel="stylesheet" href="https://g.alicdn.com/apsara-media-box/imp-web-player/2.18.1/skins/default/aliplayer-min.css" />
 	<script type="text/javascript" src="https://g.alicdn.com/apsara-media-box/imp-web-player/2.18.1/aliplayer-min.js"></script>
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
-	<script type="text/javascript" src="get/xdclassroom/lib::long-press-event::long-press-event.min.js"></script>
-	<script type="text/javascript" src="get/xdclassroom/lib::jsqrcode::llqrcode.js"></script>
+	<script type="text/javascript" src="static/Xdclassroom/lib/long-press-event/long-press-event.min.js"></script>
+	<script type="text/javascript" src="static/Xdclassroom/lib/jsqrcode/llqrcode.js"></script>
+	<script type="text/javascript" src="static/Xdclassroom/lib/xdcheckin/locations.js"></script>
 	<script type="text/javascript" src="get/xdclassroom/classrooms.js"></script>
-	<script type="text/javascript" src="get/xdcheckin/chaoxing/locations"></script>
 
 	<head>
 		<style>
