--- a/src/xdcheckin/Xdcheckin/templates/player.html
+++ b/src/xdcheckin/Xdcheckin/templates/player.html
@@ -92,6 +92,7 @@
 			<button onclick="mute(player3)">Mute</button>
 		</p>
 		<div id="player3-div"></div>
+		<div id="footer"> </div>
 	</body>
 
 	<script>
