--- a/src/xdcheckin/Xdcheckin/templates/player.html
+++ b/src/xdcheckin/Xdcheckin/templates/player.html
@@ -92,7 +92,12 @@
 			<button onclick="mute(player3)">Mute</button>
 		</p>
 		<div id="player3-div"></div>
-		<div id="footer"> </div>
+		<p align="center">
+			<div id="footer-div" style="text-align: center">
+				Copyright 2023 Pairman
+				<a href="https://github.com/Pairman/Xdclassroom">Source Code</a>
+			</div>
+	</p>
 	</body>
 
 	<script>
