--- a/src/xdcheckin/Xdcheckin/templates/player.html
+++ b/src/xdcheckin/Xdcheckin/templates/player.html
@@ -351,7 +351,7 @@
 								button.setAttribute('onclick', 'chaoxing.')
 							}
 							type = ((activity["type"] == "2") ? "Qrcode Checkin" : "Location Checkin");
-							button.innerText = type + " (" + activity["active_id"] + ", " + activity["time_left"] + ")";
+							button.innerText = type + " (" + activity["name"] + ", " + activity["active_id"] + ", " + activity["time_left"] + ")";
 							button.setAttribute('onclick', 'chaoxingLocationCheckin(' + JSON.stringify({"active_id": activity["active_id"]}) + ')');
 							e.appendChild(button);
 						}
