fallback to local classrooms.js if error loading.

--- a/src/xdcheckin/Xdcheckin/templates/player.html
+++ b/src/xdcheckin/Xdcheckin/templates/player.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" src="static/Xdclassroom/lib/long-press-event/long-press-event.min.js"></script>
 	<script type="text/javascript" src="static/Xdclassroom/lib/jsqrcode/llqrcode.js"></script>
 	<script type="text/javascript" src="static/Xdclassroom/lib/xdcheckin/locations.js"></script>
+	<script type="text/javascript" src="static/Xdclassroom/classrooms.js"></script>
 	<script type="text/javascript" src="get/xdclassroom/classrooms.js"></script>
 
 	<head>
