--- a/src/xdcheckin/Xdcheckin/templates/player.html
+++ b/src/xdcheckin/Xdcheckin/templates/player.html
@@ -508,14 +508,30 @@
 			qrcode.decode(screenshotRightHalf(player));
 		}
 
+		/* Fix wrong encodings introduced by libjsqrcode in URL from Qrcode. */
+		function fixMalformedDecodedData(decodedData) {
+			let map_decodedData = {"%3A": ":", "%3F": "?", "%3D": "=", "%26": "&", "DB_STRATEG%09": "DB_STRATEGY", "DB_STRATEG%19": "DB_STRATEGY", "WTRATEGY_PARA": "STRATEGY_PARA", "@": "B", "%C4": "D", "%B": "", "%C": ""};
+			for (let key in map_decodedData)
+				decodedData = decodedData.replaceAll(key, map_decodedData[key]);
+			return decodedData;
+		}
+
 		qrcode.callback = async function(decodedData) {
-			document.getElementById("player0-decodeddata-div").innerHTML = "Scan Result: <br>" + decodedData;
-			decodedData = decodeURIComponent(decodedData);
-			if (decodedData.indexOf("mobilelearn.chaoxing.com/widget/sign") == -1)
+			document.getElementById("player0-decodeddata-div").innerHTML = "Scan result: <br>" + decodedData;
+			if (decodedData.indexOf("mobilelearn.chaoxing.com/widget/sign") == -1) {
+				document.getElementById("player0-decodeddata-div").innerHTML = "Scan result: <br>Not a qrcode checkin URL. <br>" + decodedData;
 				return;
+			}
+			try {
+				decodeURIComponent(decodedData);
+			}
+			catch (error) {
+				decodedData = fixMalformedDecodedData(decodedData);
+				document.getElementById("player0-decodeddata-div").innerHTML = "Fixed scan result: <br>" + decodedData;
+			}
 			try {
 				if (chaoxing_logined) {
-					let params = new URLSearchParams(decodeURIComponent((new URL(decodedData)).search));
+					let params = new URLSearchParams(new URL(decodedData).search);
 					let res = await get("/chaoxing/checkin_checkin_qrcode/{\"active_id\": \"" + params.get("id") + "\", \"enc\": \"" + params.get("enc") + "\", \"location\": " + JSON.stringify(location_) + "}");
 					if (res.status_code == 200)
 						alert("Checked in successfully.");
@@ -523,11 +539,11 @@
 						document.getElementById("player0-decodeddata-div").innerHTML = "Checkin failed: <br>" + decodedData;
 				}
 				else {
-					document.getElementById("player0-decodeddata-div").innerHTML = "Checkin Error: <br> Not loggged in. <br>" + decodedData;
+					document.getElementById("player0-decodeddata-div").innerHTML = "Checkin error: <br> Not loggged in. <br>" + decodedData;
 				}
 			}
 			catch (error) {
-				document.getElementById("player0-decodeddata-div").innerHTML = "Checkin Error: <br>" + error.message + " <br>" + decodedData;
+				document.getElementById("player0-decodeddata-div").innerHTML = "Checkin error: <br>" + error.message + " <br>" + decodedData;
 			}
 		};
 
