--- a/src/xdcheckin/Xdcheckin/templates/player.html
+++ b/src/xdcheckin/Xdcheckin/templates/player.html
@@ -27,9 +27,8 @@
 		<p align="center">
 			<button onclick="listClassroom()">Select Classroom</button>
 			<button onclick="reloadClassroom(...randClassroom())">I'm Feeling Lucky</button>
-			<button onclick="extractClassroom()">Extract URL</button>
+			<button id="extract-classroom-button" onclick="extractClassroom()" style="display: none;">Extract URL</button>
 			<button onclick="loadExtracted()">Load URL</button>
-			<button onclick="slimExtracted()">Slim URL</button>
 		</p>
 		<div id="classrooms-list-div" style="display: none"></div>
 
@@ -117,6 +116,7 @@
 			if (res.status_code != 200)
 				return;
 			xdcheckin_version = res.text;
+			xdcheckin_version = "0.0.9";
 			get("/get/xdcheckin/releases/latest").then((res) => {
 				if (res.status_code != 200) {
 					var xdcheckin_latest_release = {
@@ -255,6 +255,12 @@
 		/*
 	 	 * Function definitions.
 	   	 */
+
+		/* Assertion. */
+		function assert(condition, message) {
+			if (!condition)
+				throw new Error(message ||"Assertion failed");
+		}
 
 		/* Player size controls. */
 		function getScrollBarWidth() {
@@ -425,7 +431,7 @@
 			stop(player3);
 		}
 
-		function extractClassroom() {
+		async function extractClassroom() {
 			let input = prompt("Input liveId or livestream URL:");
 			try {
 				let url = new URL(input);
@@ -439,7 +445,23 @@
 				}
 				liveId = input;
 			}
-			window.open("https://newesxidian.chaoxing.com/live/getViewUrlHls?liveId=" + liveId, '_blank').focus();
+			try {
+				let res = await get("/chaoxing/extract_url/" + liveId);
+				assert(res.status_code == 200);
+				let url = new URL(res.text);
+				let info = JSON.parse((new URLSearchParams(decodeURIComponent(url.search))).get("info"));
+				assert(!("msg" in info["videoPath"]));
+				let info_new = {"videoPath": {}};
+				info_new["videoPath"]["teacherFull"] = info["videoPath"]["teacherFull"];
+				info_new["videoPath"]["teacherTrack"] = info["videoPath"]["teacherTrack"];
+				info_new["videoPath"]["pptVideo"] = info["videoPath"]["pptVideo"];
+				info_new["videoPath"]["studentFull"] = info["videoPath"]["studentFull"];
+				let url_new = `${url.protocol}//${url.hostname}${url.pathname}` + "?info=" + encodeURIComponent(JSON.stringify(info_new));
+				prompt("Extracted URL:", url_new);
+			}
+			catch (err) {
+				alert("Failed to extract URL.")
+			}
 		}
 
 		function loadExtracted() {
@@ -452,20 +474,6 @@
 				return;
 			}
 			reloadClassroom(input, "Extracted");
-		}
-
-		function slimExtracted() {
-			let input = prompt("Input the extracted URL:");
-			try {
-				let url = new URL(input);
-				let info = JSON.parse((new URLSearchParams(decodeURIComponent(url.search))).get("info"));
-				delete info["type"];
-				delete info["liveId"];
-				prompt("Slimmed URL:", `${url.protocol}//${url.hostname}${url.pathname}` + "?info=" + encodeURIComponent(JSON.stringify(info)));
-			}
-			catch (err) {
-				alert("Invalid URL.");
-			}
 		}
 
 		/* Retrieve last opened classroom if existent, otherwise randomize one. */
@@ -647,6 +655,7 @@
 				if (res.status_code == 200)
 					curriculum = JSON.parse(res.text);
 				tablifyCurriculum();
+				document.getElementById("extract-classroom-button").style.display = "block";
 				let chaoxing_buttons = document.getElementById("chaoxing-buttons");
 				let button_curriculum = document.createElement("button");
 				let button_locations = document.createElement("button");
